--- a/Pagina Web Direccion Empresas/index.html
+++ b/Pagina Web Direccion Empresas/index.html
@@ -66,6 +66,11 @@
         </div>
 
         <hr>
+        <div class="other text-center">
+          <h3>¿No encuentras tu problema? <br> ¡Plantea tu propio método del caso¡ </h3>
+            <a type="button" name="button" class="btn btn-primary" href="index2.html"><i class="fa fa-linode" aria-hidden="true"></i> Plantear</a>
+        </div>
+        <hr>
 
         <div class="text-center">
           <span class="fa-stack fa-4x">
@@ -107,6 +112,11 @@
 
         <div class="row content-subproblem">
         </div>
+        <hr>
+        <div class="other text-center">
+          <h3>¿No encuentras tu problema? <br> ¡Plantea tu propio método del caso¡ </h3>
+          <a type="button" name="button" class="btn btn-primary" href="index2.html"><i class="fa fa-linode" aria-hidden="true"></i> Plantear</a>
+        </div>
       </div>
 
       <div class="mainproblem hide almostfullview">
@@ -119,9 +129,14 @@
         </div> <br>
         <div class="row content-mainproblem">
         </div>
+        <hr>
+        <div class="other text-center">
+          <h3>¿No encuentras tu problema? <br> ¡Plantea tu propio método del caso¡ </h3>
+          <a type="button" name="button" class="btn btn-primary" href="index2.html"><i class="fa fa-linode" aria-hidden="true"></i> Plantear</a>
+        </div>
       </div>
+
     </div>
-  </div>
 </section>
 
 <div id="modalProblem" class="modal fade" role="dialog">
